--- a/assets/sass/modules/_nav.scss
+++ b/assets/sass/modules/_nav.scss
@@ -3,6 +3,7 @@
 
 /* responsive-nav.js styles */
 .nav-collapse {
+
   ul {
     margin: 0;
     padding: 0;
@@ -10,16 +11,19 @@
     display: block;
     list-style: none;
   }
+
   li {
     width: 100%;
     display: block;
   }
+
   &.opened {
     max-height: 9999px;
   }
 }
 
 .js {
+
   .nav-collapse {
     clip: rect(0 0 0 0);
     max-height: 0;
@@ -27,6 +31,7 @@
     display: block;
     overflow: hidden;
     zoom: 1;
+
     @include breakpoint(break-1) {
       position: relative;
       max-height: none;
@@ -46,6 +51,7 @@
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
+
   @include breakpoint(break-1) {
     display: none;
   }
@@ -58,12 +64,14 @@
     width: calc(100% - 165px);
     vertical-align: middle;
   }
+
   .main-nav__list {
     width: 165px;
     margin-left: 3%;
     background-color: $linkColour;
     border-top: 0.1rem solid $white;
     text-align: center;
+
     @include breakpoint(break-1) {
       width: 100%;
       background-color: transparent;
@@ -72,9 +80,13 @@
       text-align: right;
     }
   }
+
   li {
-    font-family: $sans-serif;
+    font-family: unquote(map-get($headingtype, font-family));
+    font-style: normal;
+    font-weight: map-get($headingtype, regular);
     @include fontsize(16, all);
+
     a, span {
       display: block;
       padding: 10px 3%;
@@ -85,21 +97,25 @@
       -moz-user-select: none;
       -ms-user-select: none;
       user-select: none;
+
       &:hover, &:active, &:focus {
         background-color: lighten($linkColour,35%);
         color: $hoverColour;
       }
     }
+
     @include breakpoint(break-1) {
       display: inline-block;
       width: auto;
       margin-right: 2rem;
       padding-top: 7px; // Vertical centering
+
       a, span {
         color: $white;
         border: 0;
         display: inline;
         padding: 0;
+
         &:hover, &:active, &:focus {
           background-color: transparent;
           color: $linkColour;
@@ -110,6 +126,7 @@
 }
 
 .js {
+
   .nav-collapse {
     @include breakpoint(break-1) {
       display: inline-block;
@@ -117,18 +134,22 @@
       max-height: none;
     }
   }
+
   .nav-toggle {
     display: block;
     position: absolute;
     right: 5%;
     top: 20px;
+
     &:after {
       content: '\2630';
       @include fontsize(30);
     }
+
     &.active:after {
       content: '\2715';
     }
+
     @include breakpoint(break-1) {
       display: none;
     }
