--- a/assets/sass/modules/_footer.scss
+++ b/assets/sass/modules/_footer.scss
@@ -4,9 +4,12 @@
 .global-footer {
   background: $headBackgroundColour;
   border-top: 0.1rem solid darken($headBackgroundColour,10%);
+
   p {
     color: $white;
-    font-family: $sans-serif;
+    font-family: unquote(map-get($headingtype, font-family));
+    font-style: normal;
+    font-weight: map-get($headingtype, regular);
     text-align: center;
     padding: 1rem 0;
     margin: 0;
