--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -19,11 +19,11 @@ body {
 
 // Links.
 a {
-  -webkit-transition: .1s color;
-  -moz-transition: .1s color;
-  -ms-transition: .1s color;
-  -o-transition: .1s color;
-  transition: .1s color;
+  -webkit-transition: color .1s, background-color .1s;
+  -moz-transition: color .1s, background-color .1s;
+  -ms-transition: color .1s, background-color .1s;
+  -o-transition: color .1s, background-color .1s;
+  transition: color .1s, background-color .1s;
   color: $linkColour;
   text-decoration: none;
 
@@ -226,26 +226,7 @@ a {
     word-break: break-all;
     word-wrap: break-word;
     margin-bottom: 2rem;
-
-    // Add padding in pre blocks to align to baseline grid.
-    $get-scale: map-get($modular-scale, scale-0);
-    $get-size: map-get($get-scale, theta);
-    $rootsize: nth($sizes, 1);
-    $baseline-push: #{1 + (($get-size * ((2 * $rootsize / $get-size) - map-get($monospacetype, cap-height))) / $rootsize + 0.00001)};
-
-    padding: 1rem #{$baseline-push}rem;
-
-    @for $i from 2 through $breakpoints-limit {
-      $get-scale: map-get($modular-scale, scale-#{$i - 1});
-      $get-size: map-get($get-scale, theta);
-      $rootsize: nth($sizes, $i);
-      $baseline-push: #{1 + (($get-size * ((2 * $rootsize / $get-size) - map-get($monospacetype, cap-height))) / $rootsize + 0.00001)};
-
-      @media screen and (min-width: nth($points, $i) / 16 * 1em ) {
-        padding: 1rem #{$baseline-push}rem;
-      }
-    }
-
+    padding: 1rem;
   }
 
   code {
