--- a/assets/sass/modules/_nav.scss
+++ b/assets/sass/modules/_nav.scss
@@ -65,7 +65,7 @@
     vertical-align: middle;
   }
 
-  &__list {
+  .main-nav__list {
     width: 165px;
     margin-left: 3%;
     background-color: $linkColour;
