--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -11,7 +11,7 @@ $breakpoints: (
   break-2: 800,   // 800px   ~ Large tablet up
   break-3: 1024,  // 1024px  ~ Desktop up
   break-4: 1600   // 1600px  ~ Large desktop up
-);
+) !default;
 
 // Root font-sizes for each breakpoint. Set to half desired line-height of body text.
 // ! Make sure to have as many sizes as breakpoints above.
@@ -21,7 +21,7 @@ $rootsizes: (
   rootsize-2: 15,   // 30px line-height body text
   rootsize-3: 17,   // 34px line-height body text
   rootsize-4: 19    // 38px line-height body text
-);
+) !default;
 
 // Set the optimum line-length for your text (based on typeface).
 // Aim for 75–100 characters a line when possible, at smaller sizes type size is more important.
@@ -33,7 +33,7 @@ $measures: (
   measure-2: 600,  // 600px wide
   measure-3: 680,  // 680px wide
   measure-4: 750   // 750px wide
-);
+) !default;
 
 // Set the max-widths for containers (based on design).
 // ! Make sure to have as many widths as breakpoints above.
@@ -43,14 +43,14 @@ $maxwidths: (
   width-2: 800,  // 800px wide
   width-3: 1100, // 110px wide
   width-4: 1300  // 1300px wide
-);
+) !default;
 
 // Gutter widths
 $gutterwidths: (
   small: 1rem,
   medium: 2rem,
   large: 4rem
-);
+) !default;
 
 // Add typefaces here.
 // Add weight and style details too.
@@ -61,20 +61,20 @@ $bodytype: (
   bold: 700,
   italic: italic,
   cap-height: 0.66
-);
+) !default;
 
 $headingtype: (
   font-family: 'Helvetica, sans-serif',
   regular: 400,
   bold: 700,
   cap-height: 0.66
-);
+) !default;
 
 $monospacetype: (
   font-family: 'Menlo, monospace',
   regular: 400,
   cap-height: 0.68
-);
+) !default;
 
 // Here are some local fonts cap-height sizes to get you started:
 // Georgia: 0.66, Times / Times New Roman: 0.65, Palatino: 0.52
@@ -84,13 +84,13 @@ $monospacetype: (
 // Proxima Nova: 0.57, Museo Slab: 0.66, JAF Facit: 0.7, Brandon Grotesque: 0.65, Clavo: 0.7, Adelle: 0.66, FF Tisa Pro: 0.82, Jubilat: 0.66, Futura PT: 0.66, Chaparral Pro: 0.5, Minion Pro: 0.66, Myriad Pro: 0.66, Adobe Caslon Pro: 0.36
 
 // Text colours. British English.
-$headingColour: #2E2E2E;
-$bodyColour: #494949;
-$linkColour: #0E58F5;
-$hoverColour: #0B348B;
-$captionColour: #BDC8CC;
-$white: #FFFFFF;
+$headingColour: #2E2E2E !default;
+$bodyColour: #494949 !default;
+$linkColour: #0E58F5 !default;
+$hoverColour: #0B348B !default;
+$captionColour: #BDC8CC !default;
+$white: #FFFFFF !default;
 
 // Background colours.
-$backgroundColour: #FCFCFC;
-$codeBackgroundColour: #F5F4F2;
+$backgroundColour: #FCFCFC !default;
+$codeBackgroundColour: #F5F4F2 !default;
